<resources>
    <string name="app_name">Kindler</string>

    <string name="hello_world">Welcome to Kindler App!</string>
    <string name="action_settings">Settings</string>
    <string name="match">Match Page</string>
    <string name="match_detail">Match Detail</string>
    <string name="match_profile">My Profile</string>
    <string name="book_list">Book List</string>
    <string name="wish_list">Wish List</string>
    <string name="search_button">Search</string>
    <string name="search_query_placeholder">Enter a book title, author, or ISBN...</string>
    <string name="main_search">Search</string>
    <string name="discover">Discover</string>
    <string name="logout">Log Out</string>
    <string name="browse_users">Browse Users</string>
    <string name="edit_profile">Edit Profile</string>

    <!--Facebook Related-->
    <string name="facebook_app_id">357506061660341</string>
    <string name="fb_login_protocol_scheme">fb357506061660341</string>
</resources>
