<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kindler.Profile">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/ProfileTitle"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:id="@+id/ProfileTitle"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="16dp"
        android:text="My Profile"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/ProfilePicture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toobar" />

    <ImageView
        android:id="@+id/ProfilePicture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="350dp"
        android:src="@android:drawable/ic_menu_camera"
        android:tint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/NameLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/NameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="300dp"
        android:layout_marginRight="300dp"
        android:text="Name"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfilePicture" />

    <TextView
        android:id="@+id/Name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        android:layout_marginBottom="19dp"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/BioLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/NameLabel"
        app:layout_constraintTop_toBottomOf="@+id/ProfilePicture" />

    <TextView
        android:id="@+id/BioLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="263dp"
        android:layout_marginRight="263dp"
        android:layout_marginBottom="8dp"
        android:text="Biography"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/Biography"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name" />


    <TextView
        android:id="@+id/Biography"
        android:layout_width="301dp"
        android:layout_height="80dp"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/border_style"
        android:maxLines="1"
        android:gravity="start"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/BookListButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BioLabel" />

    <Button
        android:id="@+id/BookListButton"
        android:layout_width="260dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/book_list"
        app:layout_constraintBottom_toTopOf="@+id/WishListButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Biography"
        tools:text="@string/book_list" />


    <Button
        android:id="@+id/WishListButton"
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/wish_list"
        app:layout_constraintBottom_toTopOf="@+id/EditProfileButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BookListButton"
        tools:text="@string/wish_list" />

    <Button
        android:id="@+id/EditProfileButton"
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/edit_profile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WishListButton" />

</android.support.constraint.ConstraintLayout>
